# Mystira.workspace

./: .codeqlignore  .commitlintrc.json  .editorconfig  .env.admin-api  .env.example  .env.publisher  .env.story-generator  .eslintrc.json  .gitattributes  .gitignore  .gitmessage  .gitmodules  .npmrc  .prettierignore  .prettierrc.json  .submodule-update  .test-workflow.md  .yamllint.yml  ADMIN_UI_LINT_FIX.md  ADMIN_UI_SUBMODULE_FIX.md  ADMIN_UI_SUBMODULE_TODO.md  AGENT_ID_FORMAT_FIX.md  AI_PROVIDER_INTEGRATION.md  BACKLOG.md  CHANGELOG.md  CI_ISSUES_RESOLVED.md  CLAUDE.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEV_RESOURCES_STANDARDIZATION_PLAN.md  Directory.Build.props  ENVIRONMENT_URLS_UPDATE.md  FRONT_DOOR_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_COMPLETE.md  INFRASTRUCTURE_STATUS.md  LICENSE  (+42 more)
.changeset/: README.md  config.json
.claude/: session-start.sh  settings.json
.cursor/: rules
.github/: CODEOWNERS  branch-protection-rules.json  copilot-instructions.md  dependabot.yml  dependency-review-config.yml  pull_request_template.md
.husky/: pre-push
.windsurf/: rules
Mystira.App.CosmosConsole/: Program.cs  appsettings.json
Mystira.DevHub/: .gitignore  package-lock.json  package.json  quickstart.md  tailwind.config.js  vite.config.ts  vitest.config.ts
Mystira.DevHub.CLI/: Program.cs  appsettings.json
Mystira.DevHub.Services/: Mystira.DevHub.Services.csproj
Mystira.DevHub/src-tauri/: Cargo.toml  generate-icon.ps1  tauri.conf.json
Mystira.DevHub/src-tauri/capabilities/: default.json
Mystira.DevHub/src-tauri/src/: cache.rs  cli.rs  config.rs  cosmos.rs  github.rs  helpers.rs  infrastructure.rs  main.rs  rate_limit.rs  retry.rs  types.rs  utils.rs
Mystira.DevHub/src-tauri/src/azure/: cli.rs  deploy_now.rs  mod.rs  resources.rs
Mystira.DevHub/src-tauri/src/azure/deployment/: deploy.rs  helpers.rs  mod.rs  preview.rs  status.rs  validate.rs
Mystira.DevHub/src-tauri/src/services/: helpers.rs  lifecycle.rs  mod.rs  ports.rs  status.rs
Mystira.Leptos/: Cargo.toml  README.md
apps/devhub/crates/mystira-contracts/: Cargo.toml
configs/: README.md  admin-ui-eslint-config.patch  admin-ui.eslint.config.mjs  admin-ui.eslintrc.cjs  admin-ui.vite.config.ts
docs/: AGENT_MODE_SETUP.md  AGENT_SETUP_GUIDE.md  AGE_SPECIFIC_VECTOR_STORES_FLOW.md  APP_COMPONENTS_EXTRACTION_ANALYSIS.md  ARCHITECTURE.md  BRANCH_PROTECTION.md  BRANCH_PROTECTION_DEV.md  CICD_BEST_PRACTICES.md  CI_CD_SETUP.md  CI_SUBMODULE_ACCESS.md  COMMITS.md  DOCUMENTATION_REORGANIZATION_SUMMARY.md  DOCUMENTATION_STATUS.md  DYNAMIC_CHAT_MODELS.md  E2E_TEST_RESULTS.md  ENTRA_MAGIC_AUTH_QUICK_REFERENCE.md  ENTRA_MAGIC_AUTH_SETUP.md  ENVIRONMENT.md  IMPLEMENTATION_ROADMAP.md  INFRASTRUCTURE.md  INFRASTRUCTURE_PHASE1.md  MIGRATION_PHASES.md  NEXT_STEPS_SUMMARY.md  NO_DEFAULT_VECTOR_STORE.md  NUGET_FEED_CONFIGURATION.md  OIDC_MIGRATION.md  PHASE1_ANALYSIS.md  PHASE1_NUGET_IMPLEMENTATION.md  PHASE1_STATUS.md  QUICK_START.md  README.md  REPOSITORY_EXTRACTION_ANALYSIS.md  SECRET_ROTATION.md  SETUP.md  SETUP_COMPLETE.md  SETUP_STATUS.md  SHARED_RESOURCES.md  STORY_GENERATOR_MIGRATION_PLAN.md  SUBMODULES.md  YAML_IMPORT_FEATURE.md  (+8 more)
frame-assets/: 5652234.eps  Floral Ornaments_04.ai  Floral Ornaments_04.eps
infra/: ARCHITECTURE_URLS.md  AZURE_FRONT_DOOR_PLAN.md  AZURE_SETUP.md  DNS_INGRESS_SETUP.md  ENVIRONMENT_URLS_SETUP.md  ENVIRONMENT_URL_CHANGES_SUMMARY.md  FRONT_DOOR_CHECKLIST.md  FRONT_DOOR_DEPLOYMENT_GUIDE.md  QUICK_ACCESS.md  README.md  azure-setup.md  dns-ingress-setup.md  package.json  quick-access.md
protos/: README.md
scripts/: Get-MonorepoMigrationManifests.ps1  README-CERTIFICATES.md  README.md  bootstrap-infra.sh  create-doc.ps1  create-github-repos.sh  debug-certificates.sh  install_tools.sh  list-agents.sh  migrate-cosmos-db.sh  pre-commit-check.sh  quality-check.ps1  quality-check.sh  (+14 more)
(+3020 files in other folders)
