[workspace]
resolver = "2"
members = [
    "crates/mystira-contracts",
    "Mystira.Leptos",
    "Mystira.Leptos/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/phoenixvc/Mystira.Devhub"

[workspace.dependencies]
# Shared contracts
mystira-contracts = { path = "crates/mystira-contracts" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Leptos
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7", features = ["csr"] }

# Tauri
tauri = { version = "2.0", features = [] }
tauri-build = { version = "2.0", features = [] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Web utilities
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
