[package]
name = "mystira-contracts"
description = "Shared API contracts for Mystira applications"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Enable TypeScript bindings generation via ts-rs
typescript = ["dep:ts-rs"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

# Optional TypeScript bindings
ts-rs = { version = "10.0", optional = true, features = ["chrono-impl", "serde-compat"] }
